# datalint-core

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  build.rs  pyproject.toml
.github/workflows/: CI.yml
migrations/: 001_initial.sql
python/datalint_core/: __init__.py  _datalint_core.pyi
src/: cache.rs  enums.rs  errors.rs  lib.rs  scanner.rs
src/db/: database.rs  models.rs  schema.rs
src/db/queries/: bboxes.rs  images.rs  labels.rs
src/format/: common.rs
tests/: test_wheel.py
