[package]
name = "datalint-core"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
include = [
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/Makefile",
    "/build.rs",
    "/src",
    "/python/datalint_core",
    "/tests",
    "!__pycache__",
    "!tests/.hypothesis",
    "!tests/.pytest_cache",
    "!*.so",
]
rust-version = "1.75"

[lib]
name = "datalint_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "debug"
path = "src/bin/debug.rs"

[dependencies]
pyo3 = { version = "0.25" }
duckdb = { version = "1.3", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "tiff"] }
rayon = "1.11"
walkdir = "2.5"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
